--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 	<title>Hello World!</title>
+	<script type="text/javascript" src="./js/script.js">
+	</script>
 </head>
 
 <body>
@@ -18,5 +20,4 @@
 		</div>
 	</div>
 </body>
-
 </html>
