--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 	<title>Hello World!</title>
 	<script type="text/javascript" src="./js/script.js">
@@ -9,6 +9,9 @@
 
 <body>
 	<div class="orientation-data">
+		<div>
+			<span id="isTrue"></span>
+		</div>
 		<div>
 			<span id="tiltFB"></span>
 		</div>
@@ -20,4 +23,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
