--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <head>
-  <meta charset="utf-8">
-  <meta name="description" content="WebRTC code samples">
-  <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1">
-  <meta itemprop="description" content="Client-side WebRTC code samples">
-  <meta itemprop="name" content="WebRTC code samples">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta id="theme-color" name="theme-color" content="#ffffff">
-  <title>getUserMedia</title>
-  <script type="text/javascript" src="./js/script.js">
-  </script>
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta id="theme-color" name="theme-color" content="#ffffff">
+	<script type="text/javascript" src="./js/script.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="./js/gps.js" ></script>
+	<script type="text/javascript" src="./js/main.js" ></script>
+	<script type="text/javascript" src="./js/adapter-latest.js" ></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
 <body>
-  <div class="orientation-data">
-    <div>
-      <span id="heading"></span>
-    </div>
-    <div>
-      <span id="supported"></span>
-    </div>
-  </div>
-  <div id="container">
-    <video id="gum-local" autoplay playsinline></video>
-    <script src="js/adapter-latest.js"></script>
-    <script src="js/main.js"></script>
-</body>
+	<div class="orientation-data">
+		<div>
+			<span id="heading"></span>
+		</div>
+		<div>
+			<span id="supported"></span>
+		</div>
+	</div>
+	<div id="container">
+		<video id="gum-local" autoplay playsinline></video>
+		<div id="mapContainer">
+			<div id="map">
 
+			</div>
+			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_432x79gFb1uhTYGjzOuSdbl_IFgd1Sw&libraries=places&callback=pos"
+			 async defer></script>
+		</div>
+		<div id="infoContainer">
+		</div>
+</body>
 </html>
