--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 	</div>
 	<div id="container">
-		<video id="gum-local" autoplay playsinline>
+		<video id="video" autoplay playsinline>
 
 		</video>
 	</div>
