--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 				<h4>The current compass heading is: </h4>
 				<h4 id="heading" class="card-title text-center"></h4>
 			</div>
-			<!-- <div>
+			<div>
 				<p id="supported" class="card-text"></p>
-			</div> -->
+			</div>
 		</div>
 		<div id="mapContainer">
 			<div id="map">
