--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta id="theme-color" name="theme-color" content="#ffffff">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="./js/script.js"></script>
-	<script type="text/javascript" src="./js/gps.js"></script>
-	<script type="text/javascript" src="./js/adapter-latest.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/mdb.css">
+	<script type="text/javascript" src="./js/main.js"></script>
 </head>
 
 <body>
@@ -21,15 +19,15 @@
 
 		</div>
 		<div class="card-body">
-			<div>
+			<div class="card-title text-center">
 				<h4>The current compass heading is: </h4>
-				<h4 id="heading" class="card-title text-center"></h4>
+				<h4 id="heading"></h4>
 			</div>
-			<div>
+			<!-- <div>
 				<p id="supported" class="card-text"></p>
-			</div>
+			</div> -->
 		</div>
-		<div id="mapContainer">
+		<div id="mapContainer" style="display:none">
 			<div id="map">
 			</div>
 			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_432x79gFb1uhTYGjzOuSdbl_IFgd1Sw&libraries=places&callback=pos"
@@ -49,6 +47,5 @@
 		</table>
 	</div>
 </body>
-<script type="text/javascript" src="./js/main.js"></script>
 
 </html>
